CHATS_SIT/force-app/main/default/objects/batchsit_t_auth_copay_hist__x.object
<CustomObject>
    
    <description>batchsit$t_auth_copay_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_auth_copay_hist</externalName>
    <fields>
        <fullName>amt_copay_auth__c</fullName>
        <description>amt_copay_auth</description>
        <externalDeveloperName>amt_copay_auth</externalDeveloperName>
        <label>Copay Auth Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_reason_ovrd__c</fullName>
        <description>cde_reason_ovrd</description>
        <externalDeveloperName>cde_reason_ovrd</externalDeveloperName>
        <label>Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_copay_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Autorization ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization Parent Fee Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_auth_copay_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_copay_auth__c</fullName>
        <description>idn_copay_auth</description>
        <externalDeveloperName>idn_copay_auth</externalDeveloperName>
        <label>identifier Auth Copay</label>
        <length>50</length>
        <referenceTo>batchsit_t_auth_copay__x</referenceTo>
        <relationshipLabel>Authorization Parent Fee Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_auth_copay_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_copay_auth_hist__c</fullName>
        <description>idn_copay_auth_hist</description>
        <externalDeveloperName>idn_copay_auth_hist</externalDeveloperName>
        <label>identifier Auth Copay history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_copay_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_copay_auth__c</fullName>
        <description>nbr_seq_copay_auth</description>
        <externalDeveloperName>nbr_seq_copay_auth</externalDeveloperName>
        <label>Number Sequence copay</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Authorization Parent Fee History</label>
    <pluralLabel>Authorization Parent Fee History</pluralLabel>
</CustomObject>